# endara-desktop

./: .gitignore  README.md  latest.json  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: copy-sidecar.js  copy-sidecar.sh  kill-relay.sh  update-cask.py
src/: app.css  app.html  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_proxy.rs  lib.rs  main.rs  webview_recovery.rs
src-tauri/src/webview_recovery/: macos.rs
src/lib/: api.test.ts  api.ts  catalog.test.ts  catalog.ts  icons.ts  logListener.test.ts  logListener.ts  mock.ts  prefix.ts  relaySidecarUi.ts  scrollUtils.test.ts  scrollUtils.ts  stores.test.ts  stores.ts  types.ts  updater.ts  utils.ts
src/lib/components/: AddEndpointModal.svelte  AddEndpointModal.test.ts  AuthTab.svelte  AuthTab.test.ts  ConfigTab.svelte  ConfirmModal.svelte  DetailPanel.svelte  EndpointIcon.svelte  EndpointRow.svelte  FailedEndpointBadge.svelte  HealthDot.svelte  LogsTab.svelte  MiniPlayer.svelte  Onboarding.svelte  RelayError.svelte  RelayLogs.svelte  SearchBar.svelte  Settings.svelte  Settings.test.ts  Sidebar.svelte  ToolsTab.svelte  ToolsTab.test.ts  TransportBadge.svelte  UnifiedCatalog.svelte  UnifiedCatalog.test.ts  add-endpoint-helpers.ts  detail-panel-helpers.test.ts  detail-panel-helpers.ts
src/lib/data/: oauth-catalog.test.ts  oauth-catalog.ts
src/lib/oauth/: actions.test.ts  actions.ts  derive-status.test.ts  derive-status.ts  oauth-status-poller.test.ts  oauth-status-poller.ts
src/routes/: +layout.svelte  +page.svelte  page-tabs.test.ts
