[package]
name = "endara-desktop"
version = "0.1.4"
description = "Endara Desktop — relay management tray app"
authors = ["Endara"]
edition = "2021"

[lib]
name = "endara_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
tokio = { version = "1", features = ["net", "sync", "time"] }
toml = "0.8"
hostname = "0.4"
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
urlencoding = "2.1.3"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication"] }
objc2-web-kit = { version = "0.3.2", features = ["WKNavigationDelegate", "WKNavigation", "WKWebView"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"

[dev-dependencies]
serial_test = "3.4.0"

